refactor: RefreshToken logic reviewed, need to be tested
